--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Hyukjun Nam
-title: Cloud Engineer | Azure MSP Group Part Lead | Customer Success Manager
+title: Cloud Infra Engineer
 email: hyukjuner@gmail.com
 website: medium.com/@hyukjuner
 
