--- a/_config.yml
+++ b/_config.yml
@@ -121,8 +121,8 @@ content:
               
               주제: Azure Network 및 VirtualMachine, Storage, AKS, Database 환경 구축
               
-              역할: 네트워크 및 인프라 아키텍쳐 설계, 구성 테스트 및 배포 진행, 일정관리, 고객사 및 내부 담당자간 커뮤니케이션 조율
-    
+              역할: 안정성을 고려한 네트워크 및 인프라 아키텍쳐 설계, 구성 테스트 및 배포 진행, 일정관리, 고객사 및 내부 담당자간 커뮤니케이션 조율    
+          
           - **고객사 AVD 환경 구축 프로젝트, 팀원**
               
               기간: 2022.07~08
@@ -134,10 +134,10 @@ content:
           - **Azure DevOps를 사용한 CI/CD 구축, PoC 담당자**
               
               기간: 2022.01
-              
-              주제: Azure DevOps 플랫폼을 사용한 Azure VMSS 에 Packer로 만든 가상머신 이미지를 배포하고 업그레이드 하는 CI/CD 파이프라인 구축
-              
-              역할: CI/CD 파이프라인 데모 구축 및 고객 설명을 위한 세션 진행
+
+              주제: Azure DevOps 플랫폼을 사용하여 Azure VMSS 에 Packer로 만든 가상머신 이미지를 배포하고 업그레이드 하는 CI/CD 파이프라인 구축
+
+              역할: 데모 CI/CD 파이프라인 구축 및 고객 설명을 위한 세션 진행
           
           ---
 
