--- a/_config.yml
+++ b/_config.yml
@@ -137,7 +137,7 @@ content:
 
               주제: Azure DevOps 플랫폼을 사용하여 Azure VMSS 에 Packer로 만든 가상머신 이미지를 배포하고 업그레이드 하는 CI/CD 파이프라인 구축
 
-              역할: 데모 CI/CD 파이프라인 구축 및 고객 설명을 위한 세션 진행
+              역할: 데모 CI/CD 파이프라인 구축 및 배포 시연을 위한 세션 진행          
           
           ---
 
