--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Hyukjun Nam
-title: Cloud Infra Engineer
+name: 남혁준
+title: 클라우드 엔지니어
 email: hyukjuner@gmail.com
 website: medium.com/@hyukjuner
 
@@ -201,8 +201,7 @@ content:
         #   Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
         description: | # this will include new lines to allow paragraphs
           - **OS**: Linux(Ubuntu, CentOS), Windows
-          - **Software**: Apache, Nginx, Tomcat
-          - **Understanding** Virtualization, Network
+          - **Understanding** Virtualization, Network, Web Server (Apache, NGINX)
       - layout: left
         title: DevOps
         # caption: 2010 - 2013
